[package]
name = "piaq"
version = "0.1.0"
authors = ["Jake Klingler <thearrow3456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme680 = "0.6.0"
embedded-hal = "0.2"
linux-embedded-hal = "0.3.0"
regex = "1"
sds011 = "0.2.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
